Log all errors to f_global using PRINT_FOR_POSTPROCESS.
Suppressed errors are only logged at high verbosity or with
-log_suppressed_errors.

Now we have 4 places and ways that we may print errors:
+ stderr: if -results_to_stderr, uses -callstack_style
+ f_results: if using drsyms, uses -callstack_style
+ f_global: for postprocessing, uses PRINT_FOR_POSTPROCESS
+ logfile: if -thread_logs, uses PRINT_FOR_POSTPROCESS

SVN-Revision: 805

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -60,6 +60,7 @@ The Dr. Memory distribution contains the following:
 
 The current version is \TOOL_VERSION.
 The changes between version 1.4.7 and 1.4.6 include:
+ - Added -log_suppressed_errors option
  - Various bug fixes
 
 The changes between version 1.4.6 and 1.4.5 include:
