Re-organize and improve documentation.
I'm relying on navbar on the side for navigation, making it possible to
have more separate pages with navigation performed on the side.

Moved Installing, Preparing, Running, Error Types, Error Reports, and Light
Mode to their own top-level pages.  Most of their sub-pages are now also on
separate pages.

Gave up on having the full path to the frontend in each example via aliases
b/c aliases aren't expanded in verbatim or code sections and those look
much better: plus, the build# was wrong.  So I switched to verbatim for all
the example command lines, giving just one platform, with both at the top
(installation, etc. already cover both anyway, and the online docs should
be general even if those packaged could be specialized).

Split content out of using.dox into errors.dox, reports.dox, and light.dox
for easier ordering without the \subpage command.

See the results at http://drmemory.org/docs/

SVN-Revision: 1048

--- a/drheapstat/docs/using.dox
+++ b/drheapstat/docs/using.dox
@@ -1,4 +1,5 @@
 /* **********************************************************
+ * Copyright (c) 2012 Google, Inc.  All rights reserved.
  * Copyright (c) 2009-2010 VMware, Inc.  All rights reserved.
  * **********************************************************/
 
@@ -292,7 +293,7 @@ script with these options:
 </tt>
 
 ********************
-\subsection sec_suppress Suppressing Errors
+\subsection page_suppress Suppressing Errors
 
 Dr. Heapstat generates a file named \p suppress.txt alongside the \p
 results.txt file.  To suppress leaks from being reported in future runs,
