--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -206,7 +206,7 @@ The changes between version 1.1.0 and 1.0.1 include:
 \endhtmlonly
 \section sec_limits Limitations
 
-This is a Beta version.  It has some missing features and undoubtedly
+Dr. Memory is still under development.  It has some missing features and undoubtedly
 some bugs.  The missing features include:
 
  - Windows system call parameters are not all known, which can
@@ -219,7 +219,7 @@ some bugs.  The missing features include:
  - 64-bit support: we plan to add this in the future.
  - 32-bit applications on 64-bit Windows have some limitations (these are
    actually limitations of the current version of the underlying DynamoRIO
-   engine): if the app creates threads prior to image entry (as cygwin apps
+   engine): if the app creates threads prior to image entry (as Cygwin apps
    often do) and does not link user32.dll, Dr. Memory will not take over
    early enough to avoid problems with the other thread(s).  On 32-bit
    Windows this can be worked around by taking over from a parent process
@@ -227,10 +227,6 @@ some bugs.  The missing features include:
    upcoming version (basically you need to use DynamoRIO's drdeploy to set
    up the child; in the future the drmemory front-end will support doing
    that for you).
- - Detecting mixing of malloc/new/new[] vs free/delete/delete[]:
-   though if the deleted class has its own allocated memory it should show
-   up as a reported memory leak; and if it doesn't, and its destructor
-   doesn't do anything else, then no harm done by not calling delete[].
  - Multiple thread corner cases:
    - Pathological races between mallocs and frees can result in Dr. Memory's
      shadow memory structures becoming mis-aligned with subsequent false
