--- a/drmemory/docs/using.dox
+++ b/drmemory/docs/using.dox
@@ -1,5 +1,5 @@
 /* **********************************************************
- * Copyright (c) 2011-2012 Google, Inc.  All rights reserved.
+ * Copyright (c) 2011-2013 Google, Inc.  All rights reserved.
  * Copyright (c) 2009-2010 VMware, Inc.  All rights reserved.
  * **********************************************************/
 
@@ -49,6 +49,13 @@ your computer:
 Ensure your Linux machine has perl installed, as it is used for the current
 front-end to Dr. Memory.
 
+Ensure your Linux installation is able to build 32-bit applications. On
+64-bit Ubuntu you will want these packages:
+
+\verbatim
+sudo apt-get install ia32-libs g++-multilib
+\endverbatim
+
 ********************
 \section sec_linux_install Installing
 
@@ -81,6 +88,16 @@ Download the \p .zip version of Dr. Memory.  Extract the files from the \p
 .zip archive into a directory of your choice.  Now either place the \p bin
 subdirectory of the Dr. Memory directory structure on your PATH, or invoke
 Dr. Memory via its full path.
+
+To edit your PATH to include Dr. Memory, from the "Start" menu, open the
+"Control Panel". Click on "System". Then click on "Advanced system
+settings". Say "Yes" to the User Account Control message.  Choose the
+"Advanced" tab and click on "Environment Variables". In the top box, under
+User Variables for your username, click on "PATH", then click on
+"Edit". Assuming you unzipped Dr. Memory into "C:\INSTALL", go to the end
+and add ";C:\INSTALL\DrMemory-Windows-1.5.0-5\bin".  Note that the semicolon
+(;) is important!  After editing your PATH, you should restart your Cygwin
+or cmd shell.
 
 ***************************************************************************
 \page page_prep Preparing Your Application
@@ -119,7 +136,7 @@ Ensure your Linux installation is able to build 32-bit applications.  On
 sudo apt-get install ia32-libs g++-multilib
 \endverbatim
 
-Dr. Memory currently only supports DWARF2 line information, not stabs, but
+Dr. Memory currently only supports DWARF2 line information, not stabs.
 DWARF2 is the default for modern versions of \p gcc.
 
 Here is a sample command line for compiling your application that combines
