Windows 2000 and VS6 tweaks: + Trailing colon on -visual_studio file(line): for VS6 + Need quotes on $(TargetDir) for VS6 + Extend -callstack_srcfile_hide to not hide the default   VS6 project dir + Mark XP+ NtUser and NtGdi syscalls as not required + Add release note on error reports not showing up in cmd
SVN-Revision: 1211

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -260,6 +260,8 @@ some bugs.  The missing features include:
    - This release can produce false positives if multiple threads write
      to adjacent bytes simultaneously.  Future releases will provide
      options to trade off performance, memory usage, and accuracy.
+ - On Windows 2000, error reports are not visible in the \p cmd window.
+   Send stderr to a file to view them inlined with program output.
 
 ****************************************************************************
 ****************************************************************************
