--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -62,6 +62,9 @@ The current version is \TOOL_VERSION.
 The changes between \TOOL_VERSION and version 1.5.0 include:
  - Re-organized and improved the documentation.
  - Added Visual Studio External Tool support (-visual_studio option)
+ - Added experimental support for Windows 8.  However, false positives
+   may occur on graphical or networked applications on Windows 8.
+   Future releases will add full support.
  - Added Dr. Syscall library and Dr. Memory Framework for building other
    tools from Dr. Memory's feature base.  Future releases will add other
    libraries and add further tool-building support.
@@ -231,9 +234,13 @@ The changes between version 1.1.0 and 1.0.1 include:
 Dr. Memory is still under development.  It has some missing features and undoubtedly
 some bugs.  The missing features include:
 
+ - Windows 8 support is experimental.  Only non-graphical, non-networked
+   applications (i.e., applications making few system calls) are expected
+   to have no false positives in this release.  Future releases will add
+   full support.
  - Windows system call parameters are not all known, which can
    result in false positives and false negatives, especially on Vista or
-   Windows 7, or with code that interacts with the network.
+   Windows 7 or Windows 8, or with code that interacts with the network.
  - The malloc in the Cygwin C library is not yet tracked separately from
    the Windows API malloc which can lead to false negatives.
  - Definedness is tracked at the byte level, not at the bit level,
