--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -267,7 +267,7 @@ some bugs.  The missing features include:
    - This release can produce false positives if multiple threads write
      to adjacent bytes simultaneously.  Future releases will provide
      options to trade off performance, memory usage, and accuracy.
- - On Windows 2000, error reports are not visible in the \p cmd window.
+ - On a 32-bit Windows 7 kernel, error reports are not visible in the \p cmd window.
    Send stderr to a file to view them inlined with program output.
 
 ****************************************************************************
