i#1265 part 1: fix callstack issues
For callstacks at a syscall on 32-bit Linux on a 64-bit kernel, skip the
vsyscall sysenter "push ebp" to avoid skipping over a frame during the
callstack walk, as the libc routine that invoked the syscall often doesn't
have a frame pointer.

Adds drsys_syscall_gateway() to the Dr. Syscall API.

SVN-Revision: 1419

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -68,6 +68,7 @@ The changes between \TOOL_VERSION and version 1.5.1 include:
  - The GDI error on using a DC by more than one thread is now off by
    default.  It can be enabled with the -check_gdi_multithread option.
  - Various bug fixes.
+ - Added drsys_syscall_gateway() to the Dr. Syscall library.
 
 The changes between version 1.5.1 and version 1.5.0 include:
  - Re-organized and improved the documentation.
