--- a/drmemory/docs/main.dox
+++ b/drmemory/docs/main.dox
@@ -1,5 +1,5 @@
 /* **********************************************************
- * Copyright (c) 2012 Google, Inc.  All rights reserved.
+ * Copyright (c) 2012-2013 Google, Inc.  All rights reserved.
  * Copyright (c) 2009 VMware, Inc.  All rights reserved.
  * **********************************************************/
 
@@ -101,6 +101,16 @@ group</a>.
 
 The Dr. Memory issue tracker is located at:
 http://code.google.com/p/drmemory/issues/list
+
+If a problem in the Dr. Memory tool itself is encountered, try the
+following steps to help diagnose the issue:
+
+ - Run the debug version of Dr. Memory and of its underlying engine
+   DynamoRIO by passing "-debug -dr_debug" to drmemory.exe.  Are any messages
+   reported?
+ - Try running light mode ("-light").  Does the issue appear there?
+ - Try running "-leaks_only -no_count_leaks -no_track_allocs".  Does that work?
+ - Try a recent build from http://build.chromium.org/p/client.drmemory/builds/
 
 To supply data for analyzing and fixing a bug, reproduce the problem using
 these options to Dr. Memory:
