--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -60,6 +60,12 @@ The Dr. Memory distribution contains the following:
 
 The current version is \TOOL_VERSION.
 The changes between \TOOL_VERSION and version 1.5.1 include:
+ - Added a separate category of error report, "potential errors", stored in
+   potential_errors.txt.  These are errors that are suspected of being
+   false positives or limited to system libraries.  It is possible that
+   they are in fact true application errors, however.  This separation of
+   errors can be disabled with the option -blacklist_num_frames 0, and
+   tuned via the options -report_blacklist and -blacklist_num_frames.
  - Added option -check_prefetch to make it easier to turn off the warnings
    on prefetching unaddressable memory.
  - Added checks for mixing of C library heap routines with Windows API heap
